--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -5,6 +5,13 @@
     list-style: none;
 }
 
+:root{
+    --color-primary: #252A34;
+    --color-secondary: #08D9D6;
+    --color-white: #FFFFFF;
+    --color-black: #000000;
+    --color-black: #EAEAEA;
+}
 body{
     font-family: 'Poppins', sans-serif;
 }
