--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -15,6 +15,11 @@
 }
 
 body {
+  background-color: var(--color-primary);
   font-family: 'Poppins', sans-serif;
+  font-size: 1.1rem;
+  color: var(--color-white);
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
 }
 /*# sourceMappingURL=styles.css.map */
