--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -13,5 +13,9 @@
     --color-black: #EAEAEA;
 }
 body{
+    background-color: var(--color-primary);
     font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    color: var(--color-white);
+    transition: all .4s ease-in-out;
 }
