--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -29,4 +29,9 @@ a {
   color: inherit;
   font-family: inherit;
 }
+
+header {
+  height: 100vh;
+  color: var(--color-white);
+}
 /*# sourceMappingURL=styles.css.map */
