Styles the section setting its height , padding , width and positioning

--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -29,3 +29,11 @@ header{
     color: var(--color-white);
 
 }
+section{
+    min-height: 100vh;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 3rem 18rem;
+}
