--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -34,4 +34,13 @@ header {
   height: 100vh;
   color: var(--color-white);
 }
+
+section {
+  min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 3rem 18rem;
+}
 /*# sourceMappingURL=styles.css.map */
