--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -9,9 +9,11 @@
 :root {
   --color-primary: #252A34;
   --color-secondary: #08D9D6;
+  --color-red: #FF2E63;
   --color-white: #FFFFFF;
   --color-black: #000000;
-  --color-black: #EAEAEA;
+  --color-grey: #EAEAEA;
+  --box-shadow-1: 0 3px 15px rgba(0,0,0,.5);
 }
 
 body {
@@ -74,5 +76,27 @@ section {
   display: none;
   -webkit-transform: translateY(0) scale(1);
           transform: translateY(0) scale(1);
+}
+
+.controls {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  right: 3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 /*# sourceMappingURL=styles.css.map */
