--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -99,4 +99,25 @@ section {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
+
+.controls .control {
+  padding: 1rem;
+  cursor: pointer;
+  background-color: var(--color-red);
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: .7rem 0;
+  -webkit-box-shadow: var(--box-shadow-1);
+          box-shadow: var(--box-shadow-1);
+}
 /*# sourceMappingURL=styles.css.map */
