styled the icons for the control with color and font size later gave it an event none pointer

--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -120,4 +120,10 @@ section {
   -webkit-box-shadow: var(--box-shadow-1);
           box-shadow: var(--box-shadow-1);
 }
+
+.controls .control i {
+  font-size: 1.4rem;
+  color: var(--color-white);
+  pointer-events: none;
+}
 /*# sourceMappingURL=styles.css.map */
