--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -84,5 +84,10 @@ section{
         align-items: center;
         margin: .7rem 0;
         box-shadow: var(--box-shadow-1);
+        i{
+            font-size: 1.4rem;
+            color: var(--color-white);
+            pointer-events: none;
+        }
     }
 }
