styled the child element of controls the active button with a background color and a transition

--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -72,6 +72,10 @@ section{
     align-items: center;
     justify-content: center;
     transform: translateY(-50%);
+    .active-btn{
+        background-color: var(--color-secondary) !important;
+        transition: all .4s ease-in-out;
+    }
     .control{
         padding: 1rem;
         cursor: pointer;
