styled the child element for control the icon while being active

--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -106,6 +106,10 @@ section {
   transition: all .4s ease-in-out;
 }
 
+.controls .active-btn i {
+  color: var(--color-white) !important;
+}
+
 .controls .control {
   padding: 1rem;
   cursor: pointer;
