--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -93,7 +93,7 @@ section{
         box-shadow: var(--box-shadow-1);
         i{
             font-size: 1.4rem;
-            color: var(--color-white);
+            color: var(--color-grey);
             pointer-events: none;
         }
     }
