--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -65,6 +65,11 @@ section{
     transform: translateY(0) scale(1);
     background-color: #08D9D6;
 }
+.sec5{
+    display: none;
+    transform: translateY(0) scale(1);
+    background-color: peachpuff;
+}
 // controls
 .controls{
     position: fixed;
