--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -68,7 +68,19 @@ section{
 .sec5{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: peachpuff;
+}
+.active{
+   display: block;
+   animation: scaleAnim 1s ease-in-out;
+   @keyframes scaleAnim {
+       0%{
+           transform: translateY(-100%) scaleY(0);
+       }
+       100%{
+           transform: translateY(0) scaleY(1);
+       }
+       
+   }
 }
 // controls
 .controls{
