--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -149,11 +149,12 @@ section{
                 transition: all .4s ease-in-out;
                 // filter: grayscale(100%);
                 // &:hover{
-                //     filter: grayscale(1);
+                //     filter: grayscale(0);
                 //     cursor: pointer;
                 // }
             }
-    }   }
+        }
+    }
 
     .right-header{
         display: flex;
@@ -173,5 +174,48 @@ section{
     }
 }
 /*Independent components*/
+.btn-container{
+    display: flex;
+    align-items: flex-start;
+}
+.main-btn{
+    border-radius: 8px;
+    color: inherit;
+    font-weight: 600;
+    position: relative;
+    border: 1px solid var(--color-secondary);
+    display: flex;
+    align-self: flex-start;
+    align-items: center;
+    overflow: hidden;
+    .btn-text{
+        padding: 0 2rem;
+    }
+    .btn-icon{
+       background-color: var(--color-secondary);
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       padding: 1.3rem;
+    }
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translateX(100%);
+        transition: all .6s ease-out;
+        z-index: -1;
+    }
+    &:hover{
+        &::before{
+            width: 100%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            transform: translateX(0);
+        }
+    }
+
+}
 
 
