--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -11,6 +11,13 @@
     --color-white: #FFFFFF;
     --color-black: #000000;
     --color-grey: #EAEAEA;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #dbe1e8;
+    --color-grey-2: #b2becd;
+    --color-grey-3: #6c7983;
+    --color-grey-4: #454e56;
+    --color-grey-5: #2a2e35;
+    --color-grey-6: #12181b;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.5);
     --br-sm: 0.8rem
 
@@ -217,5 +224,26 @@ section{
     }
 
 }
-
-
+.main-title{
+    text-align: center;
+    h2{
+       position: relative;
+        text-transform: uppercase;
+        font-size: 4rem;
+        font-weight: 800;
+        span{
+            color: var(--color-secondary);
+        }
+        .bg-text{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            color: var(--color-grey-4);
+            transition: all .4s ease-in-out;
+            z-index: -1;
+            transform: translate(-50%, -50%);
+            font-weight: 900;
+            font-size: 6rem;
+        }
+    }
+}
