--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -341,6 +341,128 @@ section {
   text-transform: uppercase;
 }
 
+.about-stats {
+  padding-bottom: 4rem;
+}
+
+.about-stats .stat-title {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 3.5rem 0;
+  position: relative;
+}
+
+.about-stats .stat-title::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 60%;
+  height: 1px;
+  background-color: var(--color-grey-1);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.about-stats .progress-bars {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+
+.about-stats .progress-bars .progress-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.about-stats .progress-bars .progress-bar .progress-title {
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress-text {
+  color: var(--color-grey-2);
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress {
+  width: 100%;
+  height: .45rem;
+  background-color: var(--color-grey-4);
+  margin-left: 1rem;
+  position: relative;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: var(--color-secondary);
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .html {
+  width: 80%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .css {
+  width: 73%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .javascript {
+  width: 60%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .nodejs {
+  width: 50%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .figma {
+  width: 70%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .git {
+  width: 70%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .angular {
+  width: 51%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .react {
+  width: 57%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .django {
+  width: 58%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .flask {
+  width: 52%;
+}
+
+.about-stats .progress-bars .progress-bar .progress-container .progress .postgresql {
+  width: 72%;
+}
+
 /*Independent components*/
 .btn-container {
   display: -webkit-box;
