--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -242,7 +242,94 @@ section{
             text-transform: uppercase;
         }
     }
-
+}
+.about-stats{
+    padding-bottom: 4rem;
+    .stat-title{
+        text-transform: uppercase;
+        font-size: 1.4rem;
+        text-align: center;
+        padding: 3.5rem 0;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            left: 50%;
+            top: 0;
+            width: 60%;
+            height: 1px;
+            background-color: var(--color-grey-1);
+            transform: translateX(-50%);
+        }
+    }
+    .progress-bars{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        .progress-bar{
+            display: flex;
+            flex-direction: column;
+            .progress-title{
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+            .progress-container{
+                display: flex;
+                align-items: center;
+                .progress-text{
+                    color: var(--color-grey-2);
+                }
+                .progress{
+                    width: 100%;
+                    height: .45rem;
+                    background-color: var(--color-grey-4);
+                    margin-left: 1rem;
+                    position: relative;
+                    span{
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        background-color: var(--color-secondary);
+                        transition: all .4s ease-in-out;
+                    }
+                    .html{
+                        width: 80%;
+                    }
+                    .css{
+                        width: 73%;
+                    }
+                    .javascript{
+                        width: 60%;
+                    }
+                    .nodejs{
+                        width: 50%;
+                    }
+                    .figma{
+                        width: 70%;
+                    }
+                    .git{
+                        width: 70%;
+                    }
+                    .angular{
+                        width: 51%;
+                    }
+                    .react{
+                        width: 57%;
+                    }
+                    .django{
+                        width: 58%;
+                    }
+                    .flask{
+                        width: 52%;
+                    }
+                    .postgresql{
+                        width: 72%;
+                    }
+                }
+            }
+        }
+    }
 }
 /*Independent components*/
 .btn-container{
