--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -332,7 +332,7 @@ section {
 
 .about-containter .left-about p {
   line-height: 2rem;
-  padding: 1rem;
+  padding: 1rem 1rem 2rem 1rem;
   color: var(--color-white);
 }
 
@@ -343,26 +343,6 @@ section {
 
 .about-stats {
   padding-bottom: 4rem;
-}
-
-.about-stats .stat-title {
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  text-align: center;
-  padding: 3.5rem 0;
-  position: relative;
-}
-
-.about-stats .stat-title::before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 0;
-  width: 60%;
-  height: 1px;
-  background-color: var(--color-grey-1);
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
 }
 
 .about-stats .progress-bars {
@@ -461,6 +441,26 @@ section {
 
 .about-stats .progress-bars .progress-bar .progress-container .progress .postgresql {
   width: 72%;
+}
+
+.stat-title {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 3.5rem 0;
+  position: relative;
+}
+
+.stat-title::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 60%;
+  height: 1px;
+  background-color: var(--color-grey-1);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 /*Independent components*/
