--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -234,7 +234,7 @@ section{
         
         p{
             line-height: 2rem;
-            padding: 1rem;
+            padding: 1rem 1rem 2rem 1rem;
             color: var(--color-white);
         }
         h4{
@@ -245,23 +245,6 @@ section{
 }
 .about-stats{
     padding-bottom: 4rem;
-    .stat-title{
-        text-transform: uppercase;
-        font-size: 1.4rem;
-        text-align: center;
-        padding: 3.5rem 0;
-        position: relative;
-        &::before{
-            content: '';
-            position: absolute;
-            left: 50%;
-            top: 0;
-            width: 60%;
-            height: 1px;
-            background-color: var(--color-grey-1);
-            transform: translateX(-50%);
-        }
-    }
     .progress-bars{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -331,6 +314,24 @@ section{
         }
     }
 }
+.stat-title{
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 3.5rem 0;
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        left: 50%;
+        top: 0;
+        width: 60%;
+        height: 1px;
+        background-color: var(--color-grey-1);
+        transform: translateX(-50%);
+    }
+}
+
 /*Independent components*/
 .btn-container{
     display: flex;
