--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -464,7 +464,45 @@ section {
           transform: translateX(-50%);
 }
 
-/*Timeline*
+/*Timeline*/
+.timeline {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding-bottom: 3rem;
+}
+
+.timeline .timeline-item {
+  position: relative;
+  padding-left: 3rem;
+  border-left: 1px solid var(--color-grey-4);
+}
+
+.timeline .timeline-item .timeline-icon {
+  position: absolute;
+  left: -25px;
+  top: 0;
+  background-color: var(--color-secondary);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.timeline .timeline-item .timeline-icon i {
+  font-size: 1.3rem;
+}
+
 /*Independent components*/
 .btn-container {
   display: -webkit-box;
