Styled the timeline duration

--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -503,6 +503,16 @@ section {
   font-size: 1.3rem;
 }
 
+.timeline .timeline-item .timeline-duration {
+  padding: .2rem .6rem;
+  background-color: var(--color-grey-4);
+  border-radius: 15px;
+  display: inline-block;
+  font-size: .8rem;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
 /*Independent components*/
 .btn-container {
   display: -webkit-box;
