--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -359,11 +359,25 @@ section{
         .timeline-duration{
             padding: .2rem .6rem;
             background-color: var(--color-grey-4);
-            border-radius: 15px;
+            border-radius: 8px;
             display: inline-block;
             font-size: .8rem;
             text-transform: uppercase;
             font-weight: 500;
+        }
+        h5{
+            padding: 1rem 0;
+            text-transform: uppercase;
+            font-size: 1.3rem;
+            font-weight: 600;
+            span{
+                color: var(--color-grey-1);
+                font-weight: 500;
+                font-size: 1.2rem;
+            }
+        }
+        p{
+            color: var(--color-grey-1);
         }
 
     }
