--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -722,6 +722,18 @@ section {
   padding-bottom: 1rem;
 }
 
+/* Contact*/
+section.contact::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: var(--color-secondary);
+  z-index: -1;
+}
+
 /*Independent components*/
 .btn-container {
   display: -webkit-box;
