--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -510,6 +510,18 @@ section{
         }
     }
 }
+/* Contact*/
+section.contact::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: var(--color-secondary);
+    z-index: -1;
+}
+
 /*Independent components*/
 .btn-container{
     display: flex;
