Created the contact info and the contact form

--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -734,6 +734,213 @@ section.contact::before {
   z-index: -1;
 }
 
+.container-con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-con .container {
+  position: relative;
+  min-width: 1100px;
+  min-height: 550px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 1000;
+}
+
+.container-con .container .contactInfo {
+  position: absolute;
+  top: 40px;
+  width: 350px;
+  height: calc(100% - 80px);
+  background: var(--color-primary);
+  z-index: 1;
+  padding: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15);
+}
+
+.container-con .container .contactInfo h2 {
+  color: var(--color-white);
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.container-con .container .contactInfo ul.info {
+  position: relative;
+  margin: 20px 0;
+}
+
+.container-con .container .contactInfo ul.info li {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 20px 0;
+  cursor: pointer;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.container-con .container .contactInfo ul.info li span i {
+  font-size: 30px;
+  color: var(--color-grey-1);
+}
+
+.container-con .container .contactInfo ul.info li span:nth-child(1) {
+  width: 30px;
+  min-width: 25px;
+}
+
+.container-con .container .contactInfo ul.info li span:nth-child(1) i {
+  max-width: 100%;
+}
+
+.container-con .container .contactInfo ul.info li span:nth-child(2) {
+  color: var(--color-white);
+  margin-left: 10px;
+  font-weight: 400;
+}
+
+.container-con .container .contactInfo .socials {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container-con .container .contactInfo .socials li {
+  margin-right: 15px;
+}
+
+.container-con .container .contactInfo .socials li i {
+  font-size: 30px;
+}
+
+.container-con .container .contactForm {
+  position: absolute;
+  padding: 70px 50px;
+  padding-left: 250px;
+  margin-left: 150px;
+  width: calc(100% - 150px);
+  height: 100%;
+  background-color: var(--color-white);
+}
+
+.container-con .container .contactForm h2 {
+  color: var(--color-primary);
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.container-con .container .contactForm .formBox {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-top: 35px;
+}
+
+.container-con .container .contactForm .formBox .inputBox {
+  position: relative;
+  margin-bottom: 35px;
+}
+
+.container-con .container .contactForm .formBox .inputBox input, .container-con .container .contactForm .formBox .inputBox textarea {
+  width: 100%;
+  resize: none;
+  padding: 8px 0;
+  font-size: 18px;
+  font-weight: 200;
+  color: var(--color-primary);
+  border: none;
+  outline: none;
+  border-bottom: 1px solid var(--color-primary);
+}
+
+.container-con .container .contactForm .formBox .inputBox input:focus ~ span, .container-con .container .contactForm .formBox .inputBox input :valid ~ span, .container-con .container .contactForm .formBox .inputBox textarea:focus ~ span, .container-con .container .contactForm .formBox .inputBox textarea :valid ~ span {
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  color: var(--color-primary);
+}
+
+.container-con .container .contactForm .formBox .inputBox span {
+  position: absolute;
+  left: 0;
+  color: var(--color-grey-3);
+  padding: 5px 0;
+  pointer-events: none;
+  font-size: 18px;
+  font-weight: 400;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.container-con .container .contactForm .formBox .inputBox textarea {
+  height: 120px;
+}
+
+.container-con .container .contactForm .formBox .inputBox input[type="submit"] {
+  position: relative;
+  cursor: pointer;
+  background: var(--color-primary);
+  color: var(--color-white);
+  border: none;
+  max-width: 150px;
+  padding: 16px;
+  border-radius: 8px;
+}
+
+.container-con .container .contactForm .formBox .inputBox input[type="submit"]:hover {
+  background-color: var(--color-secondary);
+  -webkit-transition: all .6s ease-out;
+  transition: all .6s ease-out;
+}
+
+.container-con .container .contactForm .formBox .w50 {
+  width: 47%;
+}
+
+.container-con .container .contactForm .formBox .w100 {
+  width: 100%;
+}
+
 /*Independent components*/
 .btn-container {
   display: -webkit-box;
