--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -841,8 +841,27 @@ section.contact::before {
   margin-right: 15px;
 }
 
-.container-con .container .contactInfo .socials li i {
+.container-con .container .contactInfo .socials li li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 30px;
+  width: 50px;
+  height: 50px;
+  border-radius: 20%;
+  background-color: var(--color-grey-3);
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.container-con .container .contactInfo .socials li li:hover {
+  background-color: var(--color-secondary);
 }
 
 .container-con .container .contactForm {
@@ -925,12 +944,12 @@ section.contact::before {
   max-width: 150px;
   padding: 16px;
   border-radius: 8px;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
 }
 
 .container-con .container .contactForm .formBox .inputBox input[type="submit"]:hover {
   background-color: var(--color-secondary);
-  -webkit-transition: all .6s ease-out;
-  transition: all .6s ease-out;
 }
 
 .container-con .container .contactForm .formBox .w50 {
