--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -585,8 +585,19 @@ section.contact::before{
                 justify-content: space-between ;
                 li{
                     margin-right: 15px;
-                    i{
+                    li{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
                         font-size: 30px;
+                        width: 50px;
+                        height: 50px;
+                        border-radius: 20%;
+                        background-color: var(--color-grey-3);
+                        transition: all .4s ease-in-out;
+                        &:hover{
+                            background-color: var(--color-secondary);
+                        }
                     }
                 }
             }
@@ -653,9 +664,9 @@ section.contact::before{
                         max-width: 150px;
                         padding: 16px;
                         border-radius: 8px;
+                        transition: all .4s ease-in-out;
                         &:hover{
                             background-color: var(--color-secondary);
-                            transition: all .6s ease-out; 
                         }
                        
                     }
@@ -714,7 +725,6 @@ section.contact::before{
             transform: translateX(0);
         }
     }
-
 }
 /*Titles*/
 .main-title{
