--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -838,10 +838,6 @@ section.contact::before {
 }
 
 .container-con .container .contactInfo .socials li {
-  margin-right: 15px;
-}
-
-.container-con .container .contactInfo .socials li li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -860,8 +856,20 @@ section.contact::before {
   transition: all .4s ease-in-out;
 }
 
-.container-con .container .contactInfo .socials li li:hover {
+.container-con .container .contactInfo .socials li:hover {
   background-color: var(--color-secondary);
+}
+
+.container-con .container .contactInfo .socials li i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .container-con .container .contactForm {
