--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -584,21 +584,24 @@ section.contact::before{
                 justify-content: center;
                 justify-content: space-between ;
                 li{
-                    margin-right: 15px;
-                    li{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 30px;
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 20%;
+                    background-color: var(--color-grey-3);
+                    transition: all .4s ease-in-out;
+                    &:hover{
+                        background-color: var(--color-secondary);
+                    }
+                    i{
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        font-size: 30px;
-                        width: 50px;
-                        height: 50px;
-                        border-radius: 20%;
-                        background-color: var(--color-grey-3);
-                        transition: all .4s ease-in-out;
-                        &:hover{
-                            background-color: var(--color-secondary);
-                        }
                     }
+                    
                 }
             }
         }
@@ -668,7 +671,6 @@ section.contact::before{
                         &:hover{
                             background-color: var(--color-secondary);
                         }
-                       
                     }
                 }
                 .w50{
