--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -182,6 +182,41 @@ section {
   pointer-events: none;
 }
 
+.theme-btn {
+  top: 5%;
+  right: 3%;
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  background-color: var(--color-grey-4);
+  cursor: pointer;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  -webkit-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
+}
+
+.theme-btn:active {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+
+.theme-btn i {
+  font-size: 1.4rem;
+  color: var(--color-grey-2);
+  pointer-events: none;
+}
+
 /*Header-content*/
 .header-content {
   display: -ms-grid;
@@ -837,7 +872,7 @@ section.contact::before {
           justify-content: space-between;
 }
 
-.container-con .container .contactInfo .socials li {
+.container-con .container .contactInfo .socials a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -856,11 +891,11 @@ section.contact::before {
   transition: all .4s ease-in-out;
 }
 
-.container-con .container .contactInfo .socials li:hover {
+.container-con .container .contactInfo .socials a:hover {
   background-color: var(--color-secondary);
 }
 
-.container-con .container .contactInfo .socials li i {
+.container-con .container .contactInfo .socials a i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
