--- a/Assets/styles/styles.scss
+++ b/Assets/styles/styles.scss
@@ -171,7 +171,7 @@ section{
         position: relative;
         .header-shape{
             transition: all .4s ease-in-out;
-            width: 60%;
+            width: 65%;
             height: 100%;
             background-color: var(--color-secondary);
             position: absolute;
@@ -181,9 +181,8 @@ section{
         }
         .image{
             height: 90%;
-            width: 90%;
-            margin-left: 14rem;
-            margin-top: 2.5rem;
+            width: 68%;
+            margin-left: 4rem;
             transition: all .4s ease-in-out;
             img{
                 border-radius: var(--br-sm);
@@ -191,11 +190,11 @@ section{
                 height: 100%;
                 object-fit: cover;
                 transition: all .4s ease-in-out;
-                // filter: grayscale(100%);
-                // &:hover{
-                //     filter: grayscale(0);
-                //     cursor: pointer;
-                // }
+                filter: grayscale(100%);
+                &:hover{
+                    filter: grayscale(0);
+                    cursor: pointer;
+                }
             }
         }
     }
