--- a/Assets/styles/_media.scss
+++ b/Assets/styles/_media.scss
@@ -1,42 +1,5 @@
 /*Header*/
-@media screen and(max-width: 580px) {
-    header{
-        padding: 0;
-    }
-    header .right-header{
-        padding: 2rem !important;
-    }  
-    .theme-btn{
-        width: 50px;
-        height: 50px;
-    }
-    .header-content{
-        grid-template-columns: 1fr;
-        padding-bottom: 82.2rem;
-    }
-    // .left-header{
-    //     .header-shape{
-    //         display: none;
-    //     }
-    // }
-    .right-header{
-        grid-row: 1;
-        width: 90%;
-        margin: 0 auto;
-        // .name{
-        //     font-size: 2rem !important;
-        // }
-    }
-    .header-content .left-header .header-shape{
-        width: 87%;
-        // border-radius: 0 8px 8px 0;
-    }
-    .header-content .left-header .image{
-        margin: 0 auto;
-        width: 90%;
-    }
-
-    /*About*/
+@media screen and(max-width: 600px) {
     .about-containter{
         grid-template-columns: 1fr;
         .right-about{
@@ -53,11 +16,6 @@
     .timeline{
         grid-template-columns: 1fr;
         padding-bottom: 6rem;
-    }
-    .about-stats{
-        .progress-bars{
-            grid-template-columns: 1fr;
-        }
     }
     .portfolios{
         grid-template-columns: 1fr;
@@ -81,8 +39,82 @@
             }
         }
     }
+}
 
+@media screen and(max-width: 1440px) {
+    header{
+        padding: 0 !important;
+    }
+    .section{
+        padding: 7rem 11rem;
+    }
+}
 
+@media screen and(max-width: 1070px){
+    .about-containter{
+        grid-template-columns: 1fr;
+        .right-about{
+            padding-top: 2.5rem;
+        }
+    }
+    .portfolios{
+        grid-template-columns: 1fr 1fr;
+    }
+    .blogs{
+        grid-template-columns: 1fr 1fr;
+    }
+    .main-title{
+        h2{
+            font-size: 4rem;
+            span{
+                font-size: 4rem;
+            }
+            .bg-text{
+                font-size: 4.8rem;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 970px){
+    .section{
+        padding: 7rem 6rem;
+    }
+    header{
+        padding: 0;
+    }
+    header .right-header{
+        padding: 2rem !important;
+    }  
+    .theme-btn{
+        width: 50px;
+        height: 50px;
+    }
+    .header-content{
+        grid-template-columns: 1fr;
+        padding-bottom: 98rem;
+    }
+    // .left-header{
+    //     .header-shape{
+    //         display: none;
+    //     }
+    // }
+    .right-header{
+        grid-row: 1;
+        width: 90%;
+        margin: 0 auto;
+        // .name{
+        //     font-size: 2rem !important;
+        // }
+    }
+    .header-content .left-header .header-shape{
+        width: 87%;
+        // border-radius: 0 8px 8px 0;
+    }
+    .header-content .left-header .image{
+        margin: 0 auto;
+        width: 90%;
+    }
     .controls{
         top: auto;
         bottom: 0;
@@ -92,9 +124,70 @@
         transform: translateX(-50%);
         width: 100%;
         background-color: var(--color-grey-5);
+        opacity: 0.9;
         .control{
-            margin: 1rem .3rem;
+            margin: 1.2rem 1.2rem;
+        }
+    }
+    .blogs{
+        margin-top: 5rem;
+    }
+}
+
+@media screen and(max-width: 700px){
+    .section{
+        padding: 7rem 3rem;
+    }
+    .about-stats{
+        .progress-bars{
+            grid-template-columns: 1fr;
+        }
+    }
+    .main-title{
+        h2{
+            font-size: 3rem;
+            span{
+                font-size: 4rem;
+            }
+            .bg-text{
+                font-size: 5.3rem;
+            }
         }
     }
 }
-/*Contact*/
+
+@media screen and(max-width: 800px){
+    .blogs{
+        grid-template-columns: 1fr;
+        margin-top: 5rem;
+    }
+}
+
+@media screen and(max-width: 1270px){
+
+    .main-title{
+        h2{
+            font-size: 4rem;
+            span{
+                font-size: 4rem;
+            }
+            .bg-text{
+                font-size: 5.3rem;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 1197px){
+    .blogs{
+        margin-top: 5rem;
+    }
+    .portfolio-tex{
+        margin-top: 5rem;
+    }
+}
+@media screen and(max-width: 1165px){
+    .portfolio-text{
+        margin-top: 4rem;
+    }
+}
