--- a/Assets/styles/_media.scss
+++ b/Assets/styles/_media.scss
@@ -77,9 +77,7 @@
 }
 
 @media screen and(max-width: 970px){
-    .section{
-        padding: 7rem 6rem;
-    }
+
     header{
         padding: 0;
     }
@@ -92,7 +90,7 @@
     }
     .header-content{
         grid-template-columns: 1fr;
-        padding-bottom: 98rem;
+        padding-bottom: 101.8rem !important;
     }
     // .left-header{
     //     .header-shape{
@@ -126,7 +124,7 @@
         background-color: var(--color-grey-5);
         opacity: 0.9;
         .control{
-            margin: 1.2rem 1.2rem;
+            margin: 1.2rem 1rem;
         }
     }
     .blogs{
@@ -135,9 +133,7 @@
 }
 
 @media screen and(max-width: 700px){
-    .section{
-        padding: 7rem 3rem;
-    }
+
     .about-stats{
         .progress-bars{
             grid-template-columns: 1fr;
@@ -262,6 +258,12 @@
 
 @media (max-width: 970px){
     .container{
-        margin-bottom: 6rem !important;
+        margin-bottom: 4.5rem !important;
+    }
+}
+
+@media (max-width: 420px){
+    .control{
+        margin: 1.2rem 0.6rem !important;
     }
 }
