--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -1379,6 +1379,9 @@ section.sec5 .container-con .container .contactForm .formBox .w100 {
         -ms-flex-align: center !important;
             align-items: center !important;
   }
+  .contact .main-title h2 span:nth-child(1) {
+    color: var(--color-red);
+  }
 }
 
 @media (max-width: 700px) {
@@ -1409,6 +1412,15 @@ section.sec5 .container-con .container .contactForm .formBox .w100 {
 @media (max-width: 420px) {
   .control {
     margin: 1.2rem 0.6rem !important;
+  }
+}
+
+@media (max-width: 470px) {
+  .contact .main-title h2 {
+    font-size: 3rem;
+  }
+  .contact .main-title .bg-text {
+    font-size: 4rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
